(library
 (name node_interface)
 (libraries crypto digestif tenderbatter qcheck)
 (modules_without_implementation node_interface networking_interface)
 (preprocess
  (pps ppx_deriving_encoding))
 ; TODO: This seems wrong. How do I get dune
 ; to wrap all the modules in this folder behind a module Consenus?
 (wrapped false))
